# Rubik-s-Cube-Solver

./: CMakeLists.txt  main.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitBoard.cpp
PatternDatabases/: CornerPatternDatabase.cpp  NibbleArray.cpp  PatternDatabase.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
